--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,20 @@ services:
       SPRING_DATASOURCE_USERNAME: david
       SPRING_DATASOURCE_PASSWORD: 1234
 
+  auth_service:
+    build:
+      context: ../auth-service # asegúrate de que la ruta es correcta
+    container_name: auth_service
+    depends_on:
+      mysql_tareas:
+        condition: service_healthy
+    ports:
+      - "8084:8084"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql_tareas:3306/tareas_db
+      SPRING_DATASOURCE_USERNAME: david
+      SPRING_DATASOURCE_PASSWORD: 1234
+
 volumes:
   api_tareas_mysql_data:
-
